--- a/map/templates/map/public/base.html
+++ b/map/templates/map/public/base.html
@@ -13,4 +13,5 @@
 {% block bottom_js %}
     {{ block.super }}
     <script src="https://webapi.amap.com/maps?v=1.4.9&key={{ settings.MS.map.KEY }}"></script>
+    <script src="https://webapi.amap.com/ui/1.0/main.js"></script>
 {% endblock %}
