--- a/album/templates/album/cms/components/album_detail.html
+++ b/album/templates/album/cms/components/album_detail.html
@@ -1,6 +1,7 @@
 {% load i18n %}
-{% load staticfiles %}
-<link rel="stylesheet" href="{% static 'base/common/lib/animate/animate.css' %}">
+{% load pg_common %}
+
+<link rel="stylesheet" href="{% pg_static 'base/common/lib/animate/animate.css' %}">
 <style type="text/css">
     ul, p, label{
         margin-bottom: auto;
