--- a/album/templates/album/cms/music_manage.html
+++ b/album/templates/album/cms/music_manage.html
@@ -1,7 +1,6 @@
 {% extends './base.html' %}
 
 {% load i18n %}
-{% load staticfiles %}
 {% load pg_common %}
 
 {% block title %}
@@ -10,7 +9,7 @@
 
 {% block top_css %}
     {{ block.super }}
-    <link rel="stylesheet" href="{% static 'base/common/lib/animate/animate.css' %}">
+    <link rel="stylesheet" href="{% pg_static 'base/common/lib/animate/animate.css' %}">
 {% endblock %}
 
 {% block container %}
