--- a/album/templates/album/web/components/info_edit.html
+++ b/album/templates/album/web/components/info_edit.html
@@ -1,7 +1,7 @@
 {% load i18n %}
-{% load staticfiles %}
+{% load pg_common %}
 
-<link rel="stylesheet" href="{% static 'base/common/lib/animate/animate.css' %}">
+<link rel="stylesheet" href="{% pg_static 'base/common/lib/animate/animate.css' %}">
 <style>
     #infoEdit {
         position: absolute;
