--- a/album/templates/album/web/components/picture_edit.html
+++ b/album/templates/album/web/components/picture_edit.html
@@ -1,8 +1,8 @@
 {% load i18n %}
-{% load staticfiles %}
+{% load pg_common %}
 
-<link rel="stylesheet" href="{% static 'base/common/lib/dragula/dragula.css' %}">
-<link rel="stylesheet" href="{% static 'base/common/lib/animate/animate.css' %}">
+<link rel="stylesheet" href="{% pg_static 'base/common/lib/dragula/dragula.css' %}">
+<link rel="stylesheet" href="{% pg_static 'base/common/lib/animate/animate.css' %}">
 <style type="text/css">
     ul, p, label{
         margin-bottom: auto;
@@ -66,7 +66,7 @@
 </v-touch>
 {% endverbatim %}
 
-<script src="{% static 'base/common/lib/dragula/dragula.js' %}"></script>
+<script src="{% pg_static 'base/common/lib/dragula/dragula.js' %}"></script>
 <script type="text/javascript">
     $.extend(context, {
         albumDetailApiUrl: '{% url "album:web:api:album-detail" 0 %}',
