--- a/base/templates/base/cms/base.html
+++ b/base/templates/base/cms/base.html
@@ -1,5 +1,4 @@
 {% load i18n %}
-{% load staticfiles %}
 {% load pg_common %}
 
 <!DOCTYPE html>
@@ -24,16 +23,16 @@
             <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css">
             <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
         {% else %}
-            <link rel="stylesheet" href="{% static 'base/common/lib/bootstrap/css/bootstrap.css' %}">
-            <link rel="stylesheet" href="{% static 'base/common/lib/font-awesome/css/font-awesome.css' %}">
+            <link rel="stylesheet" href="{% pg_static 'base/common/lib/bootstrap/css/bootstrap.css' %}">
+            <link rel="stylesheet" href="{% pg_static 'base/common/lib/font-awesome/css/font-awesome.css' %}">
         {% endif %}
 
-        <link rel="stylesheet" href="{% static_v 'base/common/css/common.css' %}">
+        <link rel="stylesheet" href="{% pg_static_v 'base/common/css/common.css' %}">
     {% endblock %}
     {% if settings.USE_CDN %}
         <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     {% else %}
-        <script src="{% static 'base/common/lib/jquery/jquery-3.3.1.js' %}"></script>
+        <script src="{% pg_static 'base/common/lib/jquery/jquery-3.3.1.js' %}"></script>
     {% endif %}
     <style type="text/css">
         [v-cloak] {
@@ -62,16 +61,16 @@
         <script src="https://cdn.bootcss.com/vue/2.5.16/vue.min.js"></script>
         <script src="https://cdn.bootcss.com/hammer.js/2.0.8/hammer.min.js"></script>
     {% else %}
-        <script src="{% static 'base/common/lib/popper/umd/popper.js' %}"></script>
-        <script src="{% static 'base/common/lib/bootstrap/js/bootstrap.js' %}"></script>
-        <script src="{% static 'base/common/lib/vue/vue.js' %}"></script>
-        <script src="{% static 'base/common/lib/hammer/hammer.js' %}"></script>
+        <script src="{% pg_static 'base/common/lib/popper/umd/popper.js' %}"></script>
+        <script src="{% pg_static 'base/common/lib/bootstrap/js/bootstrap.js' %}"></script>
+        <script src="{% pg_static 'base/common/lib/vue/vue.js' %}"></script>
+        <script src="{% pg_static 'base/common/lib/hammer/hammer.js' %}"></script>
     {% endif %}
-    <script src="{% static 'base/common/lib/vue-touch/vue-touch.js' %}"></script>
+    <script src="{% pg_static 'base/common/lib/vue-touch/vue-touch.js' %}"></script>
 
-    <script src="{% static_v 'base/common/js/ajax.csrf.js' %}"></script>
-    <script src="{% static_v 'base/common/js/utils.js' %}"></script>
-    <script src="{% static_v 'base/common/js/constants.js' %}"></script>
+    <script src="{% pg_static_v 'base/common/js/ajax.csrf.js' %}"></script>
+    <script src="{% pg_static_v 'base/common/js/utils.js' %}"></script>
+    <script src="{% pg_static_v 'base/common/js/constants.js' %}"></script>
 {% endblock %}
 {% block local_js %}
 {% endblock %}
