--- a/album/templates/album/web/components/picture_edit.html
+++ b/album/templates/album/web/components/picture_edit.html
@@ -60,8 +60,8 @@
             </div>
         </div>
     </div>
-    <v-touch class="pg-center-x ab-bottom-btn" v-on:tap.prevent="hide">
-        <div class="ab-btn-del"></div>
+    <v-touch class="pg-center-x ab-bottom-btn w-80" v-on:tap.prevent="hide">
+        <div class="weui-btn weui-btn_primary">下一步</div>
     </v-touch>
 </v-touch>
 {% endverbatim %}
