--- a/album/templates/album/web/album_display.html
+++ b/album/templates/album/web/album_display.html
@@ -688,6 +688,7 @@
 {% endif %}
 
 <script>
+    var editmode = false;
     var words = {};
     var mvCfg = {
         pics: {{ pictures | safe }},
