--- a/album/templates/album/cms/components/album_detail.html
+++ b/album/templates/album/cms/components/album_detail.html
@@ -7,14 +7,18 @@
         margin-bottom: auto;
     }
     #albumDetail {
-        position: absolute;
+        position: fixed;
         left: 0;
         top: 0;
         z-index: 999;
         width: 100%;
         height: 100%;
+        overflow: auto;
         background-color: #f8f8f8;
         display: none;
+    }
+    #albumDetail .ab-bottom-btn {
+        position: fixed;
     }
     #uploaderCustom .weui-uploader__file .el{
         background: no-repeat center center;
